--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
     <section class="mb-4">
       <div class="flex justify-between items-center mb-2">
         <h2 class="font-bold text-sm">Películas Favoritas</h2>
-        <button class="text-red-700 font-semibold text-sm flex items-center gap-1">
-          Ver todo <i class="fas fa-chevron-right"></i>
-        </button>
+        
       </div>
 
       <!-- Contenedor de favoritos -->
@@ -48,7 +46,7 @@
     <a href="peliculas.html" class="flex flex-col items-center gap-1">
       <i class="fas fa-film text-lg"></i><span>Películas</span>
     </a>
-    <a href="favoritos.html" class="flex flex-col items-center gap-1 text-red-600">
+    <a href="#" class="flex flex-col items-center gap-1 text-red-600">
       <i class="fas fa-heart text-lg"></i><span>Favoritos</span>
     </a>
     <a href="series.html" class="flex flex-col items-center gap-1">
@@ -78,8 +76,8 @@
           div.className = 'min-w-[100px] flex-shrink-0';
           div.innerHTML = `
             <a href="video.html?id=${fav.id}">
-              <img src="${fav.poster}" alt="${fav.title}" class="rounded-md w-[100px] h-[140px] object-cover mb-1">
-              <div class="text-xs text-center text-gray-300 font-medium truncate w-[100px]">${fav.title}</div>
+              <img src="${fav.poster}" alt="${fav.title}" class="rounded-md w-[130px] h-[180px] object-cover mb-1">
+              <div class="text-xs text-center text-gray-300 font-medium truncate w-[140px]">${fav.title}</div>
             </a>
           `;
 
