--- a/index.html
+++ b/index.html
@@ -40,17 +40,18 @@
 
   <!-- Navegación inferior -->
   <nav class="bg-[#1a1a1a] border-t border-t-gray-800 flex justify-around py-2 text-gray-400 text-xs">
-    <a href="index.html" class="flex flex-col items-center gap-1">
+    <a href="https://cuentaappcreator.github.io/Home/" class="flex flex-col items-center gap-1">
       <i class="fas fa-home text-lg"></i><span>Inicio</span>
     </a>
-    <a href="peliculas.html" class="flex flex-col items-center gap-1">
-      <i class="fas fa-film text-lg"></i><span>Películas</span>
+    <a href="https://cuentaappcreator.github.io/streaming/" class="flex flex-col items-center gap-1">
+      <i class="fas fa-film text-lg"></i><span>Streaming</span>
     </a>
-    <a href="#" class="flex flex-col items-center gap-1 text-red-600">
-      <i class="fas fa-heart text-lg"></i><span>Favoritos</span>
-    </a>
-    <a href="series.html" class="flex flex-col items-center gap-1">
+    
+    <a href="#" class="flex flex-col items-center gap-1">
       <i class="fas fa-film text-lg"></i><span>Series</span>
+    </a>
+    <a href="https://cuentaappcreator.github.io/Label-Favoritos/" class="flex flex-col items-center gap-1 text-red-600">
+      <i class="fas fa-heart text-lg"></i><span>Favoritos</span>
     </a>
   </nav>
 
